edit controllers and models
