# app/Http/Controllers/Controller.php
@@ -87,7 +87,7 @@ use Illuminate\Routing\Controller as BaseController;
  *  title="Bill",
  *      @OA\Property(property="id", type="uuid", example="ff7f36b1-1cab-35b9-9b3f-969bb0e92109"),
  *      @OA\Property(property="arendators_count", type="integer", example=1),
- *      @OA\Property(property="balance", type="decimal", example=48658.00),
+ *      @OA\Property(property="balance", type="decimal", example=48658.52),
  *      @OA\Property(property="type", type="string", example="personal"),
  *      @OA\Property(property="status", type="string", example="open"),
  * ),
@@ -95,8 +95,8 @@ use Illuminate\Routing\Controller as BaseController;
  *  schema="Rent",
  *  title="Rent",
  *      @OA\Property(property="id", type="uuid", example="beceda62-2656-3617-97b9-b686a7d36e3b"),
- *      @OA\Property(property="car_id", type="uuid", example="1"),
- *      @OA\Property(property="arendator_id", type="uuid", example=48658.00),
+ *      @OA\Property(property="car_id", type="uuid", example="40644966-2862-35d0-a7c6-ad87c512625a"),
+ *      @OA\Property(property="arendator_id", type="uuid", example="63f081c5-1967-322f-9c2a-7f7b116441fc"),
  *      @OA\Property(property="status", type="string", example="open"),
  *      @OA\Property(property="start_datetime", type="string", example="2024-07-06 19:52:25"),
  *      @OA\Property(property="end_datetime", type="string", example="2024-07-06 19:52:25"),
@@ -108,8 +108,8 @@ use Illuminate\Routing\Controller as BaseController;
  *  title="Transaction",
  *      @OA\Property(property="id", type="uuid", example="c62bf9d4-865f-49da-ba56-ab4fa7528698"),
  *      @OA\Property(property="arendator_id", type="uuid", example="ae05a42b-9464-43df-83ed-dea6acf36f41"),
- *      @OA\Property(property="bill_id", type="decimal", example=48658.00),
- *      @OA\Property(property="modification", type="decimal", example=200),
+ *      @OA\Property(property="bill_id", type="uuid", example="4d380caf-18a7-31e8-93ed-e5d2b5d93251"),
+ *      @OA\Property(property="modification", type="decimal", example=200.22),
  * ),
  * @OA\Schema(
  *  schema="Response401",
